[gd_scene load_steps=6 format=3 uid="uid://bifemhqbynfgv"]

[ext_resource path="res://scripts/spatial_world_storage.gd" type="Script" id=1]
[ext_resource path="res://scripts/notepad3d_visualizer.gd" type="Script" id=2]
[ext_resource path="res://scripts/spatial_notepad_integration.gd" type="Script" id=3]
[ext_resource path="res://scripts/akashic_notepad_controller.gd" type="Script" id=4]
[ext_resource path="res://scripts/akashic_test_main.gd" type="Script" id=5]
[ext_resource path="res://scripts/eden_pitopia_bridge.gd" type="Script" id=6]

[node name="AkashicNotepadTest" type="Node3D"]
script = ExtResource( 5 )

[node name="SpatialWorldStorage" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AkashicController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Integration" type="Node" parent="."]
script = ExtResource( 3 )

[node name="EdenPitopiaBridge" type="Node" parent="."]
script = ExtResource( 6 )

[node name="VisualizationContainer" type="Node3D" parent="."]

[node name="Notepad3DVisualizer" type="Node3D" parent="VisualizationContainer"]
script = ExtResource( 2 )

[node name="VisualizationCamera" type="Camera3D" parent="VisualizationContainer"]
transform = Transform3D( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5, 10 )

[node name="MainLight" type="DirectionalLight3D" parent="VisualizationContainer"]
transform = Transform3D( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0 )
shadow_enabled = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DimensionLabel" type="Label" parent="UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 70.0
text = "Dimension: Î³ (3D)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="UI"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 60.0
margin_right = -20.0
margin_bottom = 90.0
text = "Akashic Records: 0 | Notepad Cells: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestButton" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = -20.0
text = "Run Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpText" type="Label" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -90.0
margin_right = -20.0
margin_bottom = -60.0
text = "WASD = Move | Q/E = Up/Down | Right-click + Drag = Rotate | Mouse Wheel = Zoom | T = Test | C = Clear | V = Toggle | E = Eden Status"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}