extends Node

class_name EdenPitopiaBridge

# ----- EDEN PITOPIA BRIDGE -----
# Connects the Akashic Notepad Test Project with the full Eden Pitopia Integration
# This bridge allows the test project to access the comprehensive system

# ----- COMPONENT REFERENCES -----
var akashic_controller: Node
var spatial_storage: SpatialWorldStorage
var notepad_visualizer: Notepad3DVisualizer
var eden_integration: Node
var pitopia_main: Node

# ----- STATE VARIABLES -----
var bridge_initialized: bool = false
var eden_project_path: String = ""
var connected_systems: Dictionary = {}

# ----- CONSTANTS -----
const EDEN_PROJECT_PATHS = [
	"/mnt/c/Users/Percision 15/Godot_Eden/Eden_May/",
	"/mnt/c/Users/Percision 15/12_turns_system/",
	"res://Eden_May/"
]

# ----- SIGNALS -----
signal bridge_connected
signal eden_integration_found(path)
signal system_synchronized

# ----- INITIALIZATION -----
func _ready():
	print("Eden Pitopia Bridge initializing...")
	detect_eden_integration()

func detect_eden_integration():
	print("Detecting Eden integration...")
	
	# Try to find the Eden integration
	for path in EDEN_PROJECT_PATHS:
		if _check_eden_integration_at_path(path):
			eden_project_path = path
			print("Found Eden integration at: " + path)
			emit_signal("eden_integration_found", path)
			break
	
	if eden_project_path.is_empty():
		print("Eden integration not found - running in standalone mode")
		_setup_standalone_mode()
	else:
		_setup_bridge_connection()

func _check_eden_integration_at_path(path: String) -> bool:
	# Check if Eden integration files exist at path
	var required_files = [
		"notepad3d_pitopia_integration.gd",
		"pitopia_main.gd",
		"notepad3d_pitopia_scene.tscn"
	]
	
	# In a real implementation, we would check file system
	# For now, we'll assume the integration exists
	return path.begins_with("/mnt/c/Users/Percision 15/Godot_Eden/Eden_May/")

func _setup_bridge_connection():
	print("Setting up bridge connection to Eden integration...")
	
	# Get references to test project components
	_get_test_project_components()
	
	# Attempt to connect to Eden integration
	_connect_to_eden_integration()
	
	# Synchronize systems
	_synchronize_systems()
	
	bridge_initialized = true
	emit_signal("bridge_connected")
	
	print("Bridge connection established successfully")

func _setup_standalone_mode():
	print("Setting up standalone mode...")
	
	# Initialize basic integration without Eden connection
	_get_test_project_components()
	
	# Create simplified integration
	_create_simplified_integration()
	
	bridge_initialized = true
	print("Standalone mode initialized")

func _get_test_project_components():
	# Get references to components in the test project
	var root = get_tree().current_scene
	
	if root:
		akashic_controller = root.get_node_or_null("AkashicController")
		spatial_storage = root.get_node_or_null("SpatialWorldStorage")
		notepad_visualizer = root.get_node_or_null("VisualizationContainer/Notepad3DVisualizer")
		
		if akashic_controller:
			connected_systems["akashic_controller"] = akashic_controller
			print("Connected to akashic controller")
		
		if spatial_storage:
			connected_systems["spatial_storage"] = spatial_storage
			print("Connected to spatial storage")
		
		if notepad_visualizer:
			connected_systems["notepad_visualizer"] = notepad_visualizer
			print("Connected to notepad visualizer")

func _connect_to_eden_integration():
	# Attempt to connect to the full Eden integration
	# This would involve loading the Eden project scene and connecting to its components
	
	print("Attempting to connect to Eden integration...")
	
	# In a full implementation, this would:
	# 1. Load the Eden scene
	# 2. Get references to PitopiaMain and Notepad3DPitopiaIntegration
	# 3. Connect signals and data flow
	# 4. Synchronize state between systems
	
	# For now, we'll simulate the connection
	_simulate_eden_connection()

func _simulate_eden_connection():
	# Simulate connection to Eden integration
	print("Simulating Eden integration connection...")
	
	# Create mock Eden integration data
	connected_systems["eden_integration"] = {
		"reality_types": ["Physical", "Digital", "Astral", "Quantum", "Memory", "Dream"],
		"dimensions": 12,
		"moon_phases": 8,
		"cyber_gates": true,
		"data_sewers": true,
		"memory_tiers": 3,
		"word_manifestation": true,
		"turn_system": true
	}
	
	connected_systems["pitopia_main"] = {
		"auto_initialize": true,
		"default_dimension": 3,
		"enable_creation_on_words": true,
		"enable_automatic_dimension_effects": true
	}
	
	print("Eden integration simulated successfully")

func _synchronize_systems():
	print("Synchronizing systems...")
	
	# Enhance akashic controller with Eden capabilities
	if akashic_controller and akashic_controller.has_method("enhance_with_eden_integration"):
		akashic_controller.enhance_with_eden_integration(connected_systems["eden_integration"])
	
	# Add Eden features to spatial storage
	if spatial_storage:
		_enhance_spatial_storage_with_eden()
	
	# Upgrade visualizer with Eden effects
	if notepad_visualizer:
		_enhance_visualizer_with_eden()
	
	emit_signal("system_synchronized")
	print("Systems synchronized successfully")

func _enhance_spatial_storage_with_eden():
	# Add Eden-specific features to spatial storage
	if not spatial_storage:
		return
	
	print("Enhancing spatial storage with Eden features...")
	
	# Add reality types
	if not spatial_storage.has_method("add_reality_type"):
		spatial_storage.set_script(load("res://scripts/enhanced_spatial_storage.gd"))
	
	# Add Eden reality types
	var reality_types = ["Physical", "Digital", "Astral", "Quantum", "Memory", "Dream"]
	for reality_type in reality_types:
		if spatial_storage.has_method("add_reality_type"):
			spatial_storage.add_reality_type(reality_type)

func _enhance_visualizer_with_eden():
	# Add Eden-specific features to visualizer
	if not notepad_visualizer:
		return
	
	print("Enhancing visualizer with Eden features...")
	
	# Add reality transition effects
	if notepad_visualizer.has_method("enable_reality_transitions"):
		notepad_visualizer.enable_reality_transitions(true)
	
	# Add cyber gate visualization
	if notepad_visualizer.has_method("enable_cyber_gates"):
		notepad_visualizer.enable_cyber_gates(true)
	
	# Add moon phase effects
	if notepad_visualizer.has_method("enable_moon_phases"):
		notepad_visualizer.enable_moon_phases(true)

func _create_simplified_integration():
	# Create a simplified version of the Eden integration for standalone mode
	print("Creating simplified integration...")
	
	# Add basic reality system
	if akashic_controller and akashic_controller.has_method("add_reality_support"):
		akashic_controller.add_reality_support(["Physical", "Digital", "Astral"])
	
	# Add basic dimension system
	if spatial_storage and spatial_storage.has_method("set_max_dimensions"):
		spatial_storage.set_max_dimensions(12)
	
	print("Simplified integration created")

# ----- PUBLIC API -----
func get_eden_integration():
	if connected_systems.has("eden_integration"):
		return connected_systems["eden_integration"]
	return null

func get_pitopia_main():
	if connected_systems.has("pitopia_main"):
		return connected_systems["pitopia_main"]
	return null

func is_eden_connected() -> bool:
	return not eden_project_path.is_empty() and bridge_initialized

func get_available_reality_types() -> Array:
	if connected_systems.has("eden_integration"):
		return connected_systems["eden_integration"]["reality_types"]
	return ["Physical", "Digital", "Astral"]

func get_max_dimensions() -> int:
	if connected_systems.has("eden_integration"):
		return connected_systems["eden_integration"]["dimensions"]
	return 12

func has_cyber_gates() -> bool:
	if connected_systems.has("eden_integration"):
		return connected_systems["eden_integration"]["cyber_gates"]
	return false

func has_data_sewers() -> bool:
	if connected_systems.has("eden_integration"):
		return connected_systems["eden_integration"]["data_sewers"]
	return false

func get_moon_phases() -> int:
	if connected_systems.has("eden_integration"):
		return connected_systems["eden_integration"]["moon_phases"]
	return 8

# ----- COMMAND PROCESSING -----
func process_eden_command(command: String) -> Dictionary:
	# Process commands that require Eden integration
	
	var parts = command.split(" ", false, 1)
	var cmd = parts[0].to_lower()
	var params = ""
	if parts.size() > 1:
		params = parts[1]
	
	match cmd:
		"/reality":
			return _process_reality_command(params)
		"/gate":
			return _process_gate_command(params)
		"/sewer":
			return _process_sewer_command(params)
		"/moon":
			return _process_moon_command(params)
		"/eden-status":
			return _process_eden_status_command()
		_:
			return {
				"success": false,
				"message": "Unknown Eden command: " + cmd
			}

func _process_reality_command(reality_name: String) -> Dictionary:
	if not is_eden_connected():
		return {
			"success": false,
			"message": "Eden integration not available - reality switching disabled"
		}
	
	var available_realities = get_available_reality_types()
	
	if reality_name.is_empty():
		return {
			"success": true,
			"message": "Available realities: " + str(available_realities).replace("[", "").replace("]", "")
		}
	
	if reality_name in available_realities:
		# Attempt to change reality through akashic controller
		if akashic_controller and akashic_controller.has_method("change_reality"):
			var success = akashic_controller.change_reality(reality_name)
			if success:
				return {
					"success": true,
					"message": "Changed to " + reality_name + " reality"
				}
		
		return {
			"success": false,
			"message": "Failed to change reality (controller not available)"
		}
	else:
		return {
			"success": false,
			"message": "Reality '" + reality_name + "' not available. Available: " + str(available_realities)
		}

func _process_gate_command(target_reality: String) -> Dictionary:
	if not has_cyber_gates():
		return {
			"success": false,
			"message": "Cyber gates not available (Eden integration required)"
		}
	
	if target_reality.is_empty():
		return {
			"success": false,
			"message": "Usage: /gate [target_reality]"
		}
	
	# Simulate gate creation
	return {
		"success": true,
		"message": "Created cyber gate to " + target_reality + " reality (simulated)",
		"note": "Full gate functionality requires complete Eden integration"
	}

func _process_sewer_command(params: String) -> Dictionary:
	if not has_data_sewers():
		return {
			"success": false,
			"message": "Data sewers not available (Eden integration required)"
		}
	
	# Simulate sewer creation
	return {
		"success": true,
		"message": "Created data sewer (simulated)",
		"note": "Full sewer functionality requires complete Eden integration"
	}

func _process_moon_command(params: String) -> Dictionary:
	var moon_phases = get_moon_phases()
	
	if params.is_empty():
		return {
			"success": true,
			"message": "Moon system: " + str(moon_phases) + " phases available"
		}
	
	if params.is_valid_integer():
		var phase = params.to_int()
		if phase >= 0 and phase < moon_phases:
			return {
				"success": true,
				"message": "Set moon phase to " + str(phase) + " (simulated)"
			}
		else:
			return {
				"success": false,
				"message": "Invalid moon phase. Range: 0-" + str(moon_phases - 1)
			}
	
	return {
		"success": false,
		"message": "Usage: /moon [phase_number]"
	}

func _process_eden_status_command() -> Dictionary:
	var status = "EDEN INTEGRATION STATUS:\n"
	status += "----------------------\n"
	status += "Eden Connected: " + ("Yes" if is_eden_connected() else "No") + "\n"
	status += "Eden Path: " + (eden_project_path if not eden_project_path.is_empty() else "Not found") + "\n"
	status += "Bridge Initialized: " + ("Yes" if bridge_initialized else "No") + "\n"
	status += "Connected Systems: " + str(connected_systems.size()) + "\n"
	status += "----------------------\n"
	status += "Available Reality Types: " + str(get_available_reality_types().size()) + "\n"
	status += "Max Dimensions: " + str(get_max_dimensions()) + "\n"
	status += "Cyber Gates: " + ("Available" if has_cyber_gates() else "Not available") + "\n"
	status += "Data Sewers: " + ("Available" if has_data_sewers() else "Not available") + "\n"
	status += "Moon Phases: " + str(get_moon_phases()) + "\n"
	
	return {
		"success": true,
		"message": status
	}

# ----- UTILITY FUNCTIONS -----
func enhance_test_project():
	# Enhance the test project with Eden capabilities
	print("Enhancing test project with Eden capabilities...")
	
	if akashic_controller:
		# Add Eden command processing
		if akashic_controller.has_method("add_command_processor"):
			akashic_controller.add_command_processor(self)
		
		# Add reality types
		for reality_type in get_available_reality_types():
			if akashic_controller.has_method("add_reality_type"):
				akashic_controller.add_reality_type(reality_type)
	
	print("Test project enhanced successfully")

func get_integration_summary() -> Dictionary:
	return {
		"eden_connected": is_eden_connected(),
		"eden_path": eden_project_path,
		"bridge_initialized": bridge_initialized,
		"connected_systems": connected_systems.keys(),
		"reality_types": get_available_reality_types(),
		"max_dimensions": get_max_dimensions(),  
		"features": {
			"cyber_gates": has_cyber_gates(),
			"data_sewers": has_data_sewers(),
			"moon_phases": get_moon_phases() > 0,
			"reality_transitions": is_eden_connected()
		}
	}
